# gcloud-sdk-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  renovate.json  search-index.js  settings.html  source-files.js
.cargo/: config
.github/: renovate.json
.github/workflows/: auto-gapi-pr.yml  auto-release.yml  check-gcloud-keyless.yaml  ci.yml  doc.yml  security-audit.yml  tests.yml
examples/artifact-registry-client/: Cargo.toml
examples/artifact-registry-client/src/: main.rs
examples/bigquery-storage-read-client/: Cargo.toml
examples/bigquery-storage-read-client/src/: main.rs
examples/bigquery-storage-write-client/: Cargo.toml
examples/bigquery-storage-write-client/src/: main.rs
examples/cloudresourcemanager-client/: Cargo.toml
examples/cloudresourcemanager-client/src/: main.rs
examples/firestore-client/: Cargo.toml
examples/firestore-client/src/: main.rs
examples/gcs-rest-client/: Cargo.toml
examples/gcs-rest-client/src/: main.rs
examples/iam-client/: Cargo.toml
examples/iam-client/src/: main.rs
examples/id-token/: Cargo.toml
examples/kms-client/: Cargo.toml
examples/kms-client/src/: main.rs
examples/secrets-manager-client/: Cargo.toml
examples/secrets-manager-client/src/: main.rs
examples/servicecontrol-client/: Cargo.toml
examples/servicecontrol-client/src/: main.rs
examples/simple-api-client/: Cargo.toml  Dockerfile
examples/simple-api-client/src/: main.rs
examples/spanner-admin/: Cargo.toml  README.md
examples/spanner-admin/src/: main.rs
examples/text-to-speech-client/: Cargo.toml
examples/text-to-speech-client/src/: main.rs
gcloud-protos-generator/: Cargo.toml
gcloud-protos-generator/openapi/: README.md  generate-all.sh
gcloud-protos-generator/openapi/generator/: README.md
gcloud-protos-generator/openapi/google/artifactregistry-v1/: openapi.yaml
gcloud-protos-generator/openapi/google/compute-v1/: openapi.yaml
gcloud-protos-generator/openapi/google/dns-v1/: openapi.yaml
gcloud-protos-generator/openapi/google/lustre-v1/: openapi.yaml
gcloud-protos-generator/openapi/google/servicecontrol-v2/: openapi.yaml
gcloud-protos-generator/openapi/google/storage-v1/ext/apis/: objects_api.rs
gcloud-protos-generator/openapi/patches/: compute-api-2025-01-18-02.patch  compute-api-2025-01-18.patch  compute-api-2025-04-19-01.patch  compute-api-2025-05-05-01.patch
gcloud-protos-generator/src/: gen.rs  main.rs
gcloud-sdk/: Cargo.toml  build-all-features.sh
gcloud-sdk/genproto/: ccc.hosted.marketplace.v2.rs  cloud.kubernetes.security.containersecurity_logging.rs  google.actions.r#type.rs  google.actions.sdk.v2.conversation.rs  google.actions.sdk.v2.interactionmodel.prompt.rs  google.actions.sdk.v2.interactionmodel.r#type.rs  google.actions.sdk.v2.interactionmodel.rs  google.actions.sdk.v2.rs  google.ads.admanager.v1.rs  google.ads.admob.v1.rs  google.ads.datamanager.v1.rs  google.ads.googleads.v10.common.rs  google.ads.googleads.v10.enums.rs  google.ads.googleads.v10.errors.rs  google.ads.googleads.v10.resources.rs  google.ads.googleads.v10.services.rs  google.ads.googleads.v11.common.rs  google.ads.googleads.v11.enums.rs  google.ads.googleads.v11.errors.rs  google.ads.googleads.v11.resources.rs  google.ads.googleads.v11.services.rs  google.ads.googleads.v12.common.rs  google.ads.googleads.v12.enums.rs  google.ads.googleads.v12.errors.rs  google.ads.googleads.v12.resources.rs  google.ads.googleads.v12.services.rs  google.ads.googleads.v13.common.rs  google.ads.googleads.v13.enums.rs  google.ads.googleads.v13.errors.rs  google.ads.googleads.v13.resources.rs  google.ads.googleads.v13.services.rs  google.ads.googleads.v14.common.rs  google.ads.googleads.v14.enums.rs  google.ads.googleads.v14.errors.rs  google.ads.googleads.v14.resources.rs  google.ads.googleads.v14.services.rs  google.ads.googleads.v15.common.rs  google.ads.googleads.v15.enums.rs  google.ads.googleads.v15.errors.rs  google.ads.googleads.v15.resources.rs  (+654 more)
gcloud-sdk/src/: api_client.rs  apis.rs  error.rs  google_api_client.rs  google_apis.rs  google_cached_client.rs  google_connector_interceptor.rs  google_tonic_connector.rs  lib.rs  middleware.rs  token.rs
googapis/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  all.html  build-all-features.sh  constant.CERTIFICATES.html  index.html  sidebar-items.js
googapis/ccc/: index.html  sidebar-items.js
googapis/genproto/: ccc.hosted.marketplace.v2.rs  google.actions.r#type.rs  google.actions.sdk.v2.conversation.rs  google.actions.sdk.v2.interactionmodel.prompt.rs  google.actions.sdk.v2.interactionmodel.r#type.rs  google.actions.sdk.v2.interactionmodel.rs  google.actions.sdk.v2.rs  google.ads.admob.v1.rs  google.ads.googleads.v1.common.rs  google.ads.googleads.v1.enums.rs  google.ads.googleads.v1.errors.rs  google.ads.googleads.v1.resources.rs  google.ads.googleads.v1.services.rs  google.ads.googleads.v10.common.rs  google.ads.googleads.v10.enums.rs  google.ads.googleads.v10.errors.rs  google.ads.googleads.v10.resources.rs  google.ads.googleads.v10.services.rs  google.ads.googleads.v11.common.rs  google.ads.googleads.v11.enums.rs  google.ads.googleads.v11.errors.rs  google.ads.googleads.v11.resources.rs  google.ads.googleads.v11.services.rs  google.ads.googleads.v2.common.rs  google.ads.googleads.v2.enums.rs  google.ads.googleads.v2.errors.rs  google.ads.googleads.v2.resources.rs  google.ads.googleads.v2.services.rs  google.ads.googleads.v3.common.rs  google.ads.googleads.v3.enums.rs  google.ads.googleads.v3.errors.rs  google.ads.googleads.v3.resources.rs  google.ads.googleads.v3.services.rs  google.ads.googleads.v4.common.rs  google.ads.googleads.v4.enums.rs  google.ads.googleads.v4.errors.rs  google.ads.googleads.v4.resources.rs  google.ads.googleads.v4.services.rs  google.ads.googleads.v7.common.rs  google.ads.googleads.v7.enums.rs  (+405 more)
googapis/google/: index.html  sidebar-items.js
googapis/grafeas/: index.html
googapis/maps/: index.html  sidebar-items.js
googapis/src/: apis.rs  error.rs  googapis.rs  google_cached_client.rs  lib.rs  token.rs
src/googapis/: lib.rs.html  (+1 more)
xtask/: Cargo.toml
(+34830 files in other folders)
