[workspace]
members = [
    "gcloud-sdk",
    "gcloud-protos-generator",
    "examples/firestore-client",
    "examples/secrets-manager-client",
    "examples/gcs-rest-client",
    "examples/simple-api-client",
    "examples/bigquery-storage-write-client",
    "examples/text-to-speech-client",
    "examples/id-token",
]
