[workspace]
resolver = "2"
members = [
    "gcloud-sdk",
    "gcloud-protos-generator",
    "examples/firestore-client",
    "examples/secrets-manager-client",
    "examples/gcs-rest-client",
    "examples/simple-api-client",
    "examples/bigquery-storage-write-client",
    "examples/text-to-speech-client",
    "examples/kms-client",
    "examples/id-token",
    "examples/iam-client",
    "examples/artifact-registry-client",
]
