[package]
name = "protosgen"
version = "0.10.0"
authors = ["mechiru <u9053u6d41@gmail.com>", "me@abdolence.dev"]
edition = "2021"

[dependencies]
tonic-build = { version = "0.9", features = ["prost-build"] }
prost-build = "0.11"
prettyplease = "0.1"
syn = { version = "1", default-features = false, features = ["full", "parsing"] }
