[package]
name = "protosgen"
version = "0.11.0"
authors = ["mechiru <u9053u6d41@gmail.com>", "me@abdolence.dev"]
edition = "2021"

[dependencies]
tonic-prost-build = { version = "0.14.0" }
prost-build = "0.14"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
