[package]
name = "bigquery-storage-write-client-example"
version = "0.3.0"
authors = ["me@abdolence.dev"]
edition = "2021"

[dependencies]
gcloud-sdk = { path = "./../../gcloud-sdk", default-features = false, features = ["google-cloud-bigquery-storage-v1"] }
tonic = { version = "0.8", features = ["tls"] }
tower = "0.4"
prost = "0.11"
prost-types = "0.11"
chrono = { version = "0.4", default-features = false }
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
futures = "0.3"
