[package]
name = "servicecontrol-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
gcloud-sdk = { path = "./../../gcloud-sdk", default-features = false, features = ["google-rest-servicecontrol-v1", "tls-webpki-roots"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.20", features = ["full"] }
uuid = { version = "1.8", default-features = false, features = ["v4"] }
rustls = "0.23.31"