[package]
name = "simple-api-client-example"
version = "0.3.0"
authors = ["me@abdolence.dev"]
edition = "2021"

[dependencies]
gcloud-sdk = { version = "0.25.0", git = "https://github.com/abdolence/gcloud-sdk-rs.git", branch = "hyper-1", default-features = false, features = ["tls-webpki-roots","google-logging-v2"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
