[package]
name = "spanner-admin"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"

[dependencies]
googapis = { path = "./../../googapis", default-features = false, features = ["google-spanner-admin-database-v1"] }
gouth = "0.2.1"
tonic = { version = "0.6.1", features = ["tls"] }
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "time", "fs", "macros"] }
