[package]
name = "spanner-admin"
version = "0.6.0"
authors = ["mechiru <u9053u6d41@gmail.com>", "me@abdolence.dev"]
edition = "2018"

[dependencies]
gcloud-sdk = { path = "./../../gcloud-sdk", default-features = false, features = ["google-spanner-admin-database-v1"] }
tonic = { version = "0.7", features = ["tls"] }
prost = "0.10"
prost-types = "0.10"
tokio = { version = "1.14", features = ["rt-multi-thread", "time", "fs", "macros"] }
chrono = "0.4"
